fix security issue CVE-2022-41923
see: https://grails.org/blog/2022-11-22-ss-plugin-auth-cve.html

--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,6 @@
 #Grails Metadata file
-#Sat May 21 15:48:45 CEST 2022
-app.buildNumber=269
+#Sun Nov 27 14:05:34 CET 2022
+app.buildNumber=270
 app.grails.version=2.5.5
 app.name=cinnamon
 app.servlet.version=3.0
